* Fixed: loading indicators not showing on running tests

--- a/devon/web/theme/project.css
+++ b/devon/web/theme/project.css
@@ -343,7 +343,7 @@ body {
     cursor: default;
     display: block;
     background: url(emptyIcon-sm.png) no-repeat 0 1px;
-    padding-left: 18px;
+    padding-left: 20px;
     color: inherit;
     text-decoration: none;
     white-space: nowrap;
@@ -384,6 +384,10 @@ body {
 
 .treeItem.running .treeItemLink {
     background-image: url(loading.gif) !important;
+}
+
+.treeItem.selected.running .treeItemLink {
+    background-image: url(loadingSel.gif) !important;
 }
 
 .treeItemCheckbox {
